--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Darth Weather</title>
+    <title>Dart Weather</title>
 </head>
 
 <body style="background-color: #013a3a;">
@@ -13,7 +13,7 @@
         <h1 class="text-center mt-5" style="color: #5a9696;">DARTH WEATHER</h1>
         <div class="card mx-auto mt-4" style="width: 90%; max-width: 470px; background: linear-gradient(115deg, #f3ef0511, #00ffff); color: #ffff; margin: 70px auto 0; border-radius: 20px; padding: 40px 35px; text-align: center;">
             <div class="search d-flex justify-content-between">
-                <input type="text" class="form-control" placeholder="Enter City...(berlin,london,paris...)" style="background: #cbfdff; color: #555; padding: 10px 25px; height: 60px; border-radius: 30px; flex: 1; margin-right: 16px; font-size: 18px;">
+                <input type="text" class="form-control search-input" list="city-suggestions" placeholder="Şehir Girin...(berlin, london, paris...)" style="background: #cbfdff; color: #555; padding: 10px 25px; height: 60px; border-radius: 30px; flex: 1; margin-right: 16px; font-size: 18px;">
                 <button class="btn btn-primary" id="search-button" style="background: #34c7c7; color: #fff; font-size: 10px; border-radius: 10px; cursor: pointer;"><img src="images/search.png" alt="Search" style="width: 18px;"></button>
             </div>
             <div class="error text-end mt-2" style="text-align: right; margin-right: 10px; font-size: 20px; color: rgb(165, 80, 80); display: none;">
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    <datalist id="city-suggestions" style="padding: 50px;"></datalist>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
