--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <input type="text" class="form-control search-input" list="city-suggestions" placeholder="Şehir Girin...(berlin, london, paris...)" style="background: #cbfdff; color: #555; padding: 10px 25px; height: 60px; border-radius: 30px; flex: 1; margin-right: 16px; font-size: 18px;">
                 <button class="btn btn-primary" id="search-button" style="background: #34c7c7; color: #fff; font-size: 10px; border-radius: 10px; cursor: pointer;"><img src="images/search.png" alt="Search" style="width: 18px;"></button>
             </div>
+            <div id="search_results">
+               
+            </div>
             <div class="error text-end mt-2" style="text-align: right; margin-right: 10px; font-size: 20px; color: rgb(165, 80, 80); display: none;">
                 <p>invalid city name</p>
             </div>
